add simple analytics

--- a/site/_includes/head.html
+++ b/site/_includes/head.html
@@ -25,5 +25,7 @@
   <!-- Ionicons -->
   <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
 
+  <script defer src="https://analytics.neverskipfitness.com/script.js" data-website-id="12314b38-b43e-43d1-b1a6-a2b619b26b68"></script>
+
   <link rel="stylesheet" href="/assets/main.css">
 </head>
