--- a/component-library/components/hero/hero.jekyll.html
+++ b/component-library/components/hero/hero.jekyll.html
@@ -166,7 +166,7 @@
           </div>
 
           <div class="{{c}}__right">
-            <div class="{{c}}__image">
+            <div >
               <img loading="lazy" src="{{ include.image }}" alt="{{ include.hero_image_alt }}">
             </div>
           </div>
