--- a/component-library/shared/styles/0-settings/_B_color-scheme.scss
+++ b/component-library/shared/styles/0-settings/_B_color-scheme.scss
@@ -1,13 +1,13 @@
 /* Color Scheme */
-$primary-color: #1495a7;
+$primary-color: #715073;
 $secondary-color: #003687;
 $white: #fff;
-$dark: #110E38;
+$dark: #715073;
 $gray: #d9d9d9;
 $light-gray: #f5f5f5;
 $blue-gray: #d5dce3;
 
-$background-color: #f2f6ff;
+$background-color: #FDF6ED;
 $background-color-alt: $white;
 
 $text-color: $dark;
