--- a/site/_includes/head.html
+++ b/site/_includes/head.html
@@ -27,5 +27,16 @@
 
   <script defer src="https://analytics.neverskipfitness.com/script.js" data-website-id="12314b38-b43e-43d1-b1a6-a2b619b26b68"></script>
 
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17459536209">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-17459536209');
+</script>
+
   <link rel="stylesheet" href="/assets/main.css">
 </head>
