--- a/component-library/components/hero/hero.jekyll.html
+++ b/component-library/components/hero/hero.jekyll.html
@@ -177,7 +177,7 @@
             </svg>
           </div>
           <div class="banner-text">
-            <p><strong>Minus 20% Auf Abnehmen</strong> mit dem FEELING Code! <span class="banner-expiry">(Nur im Oktober!)</span></p>
+            <p><strong>Minus 20% Auf Abnehmen</strong> mit dem FEELING Code! <span class="banner-expiry">(Verlängert bis 07. November!)</span></p>
           </div>
           <div class="banner-code-wrapper">
             <div class="banner-code">
