--- a/component-library/components/hero/hero.jekyll.html
+++ b/component-library/components/hero/hero.jekyll.html
@@ -171,7 +171,7 @@
             </div>
           </div>
 
-        </div> <a href="https://iysak.com/products/abnehmen-mit-dem-feeling-code-nach-iysak" class="exciting-banner"> <div class="banner-icon">
+        <!-- </div> <a href="https://iysak.com/products/abnehmen-mit-dem-feeling-code-nach-iysak" class="exciting-banner"> <div class="banner-icon">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="36px" height="36px">
               <path d="M21.75 6.25a1 1 0 0 0-1-1H11.59l-5.3-5.3a1 1 0 0 0-1.41 0L.7 4.14a1 1 0 0 0 0 1.41l5.3 5.3v9.9a1 1 0 0 0 1 1h12.75a1 1 0 0 0 1-1V7.25a1 1 0 0 0-.25-.66zM8 8.5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3z"/>
             </svg>
@@ -184,7 +184,7 @@
               <span>LIZZ20ABNEHMEN</span>
             </div>
           </div>
-        </a> </div>
+        </a> </div> -->
     </div>
   </div>
 </section>
